@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.14
+Release: 0.16
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -475,6 +475,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Jun 20 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.16
+- brp-python-bytecompile to automagically bytecode compile python.
+
 * Thu Jun 19 2003 Jeff Johnson <jbj@redhat.com> 4.2.1-0.15
 - 2nd test release.
 
